--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Welcome to iDAAS-Connect
+title: iDAAS-Connect
 email: ""
 description: >- # this means to ignore newlines until "baseurl:"
   iDAAS Connectors for Inbound Data Processing
